@@ -86,6 +86,9 @@
 
 #define NS_ROSTERX                              "http://jabber.org/protocol/rosterx"
 
+#define NS_MESSAGE_CARBONS                      "urn:xmpp:carbons:1"
+#define NS_MESSAGE_FORWARD                      "urn:xmpp:forward:0"
+
 #define NS_VACUUM_PRIVATESTORAGE_UPDATE         "vacuum:privatestorage:update"
 
 #endif
