@@ -27,6 +27,7 @@ add_subdirectory(iqauth)
 add_subdirectory(jabbersearch)
 add_subdirectory(mainwindow)
 add_subdirectory(messagearchiver)
+add_subdirectory(messagecarbons)
 add_subdirectory(messageprocessor)
 add_subdirectory(messagestyles)
 add_subdirectory(messagewidgets)
